2008-12-02  Loic Dachary <loic@dachary.org>

 	* Release 1.7.1

2008-12-02  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerservice.py.in
	(TourneyManagerTestCase.test04_bogusTourneySerial): Wrote test.
	(TourneyManagerTestCase): Wrote stub for test.

	* pokernetwork/pokerpackets.py (PacketPokerGetTourneyManager):
	Documented packet, added error code.

	* pokernetwork/pokerservice.py (PokerService.tourneyManager):
	check cursour.rowcount on SELECT * FROM tourneys, give appropriate
	verbose output/error message, return PacketPokerError if no rows
	found.

	* tests/test-pokerservice.py.in
	(TourneyManagerTestCase.test04_bogusTourneySerial): Wrote test.

	* configure.ac (AC_PROG_CPP): AC_PROG_CPP appears to be
	deprecated; switched to AC_PROG_CXX

	* configure.ac (poker2d): Added PYTHON_2_6 support.

	* pokerclient2d/Makefile.am (PYTHON_2_6): Added Python 2.6 support
	that mimics the 2.5 support.

2008-12-02  Loic Dachary <loic@dachary.org>

	* pokernetwork/countfilter.py, tests/test-countfilter.py.in: Do not
	  use request.getSession() but extract the session cookie using the
	  same code as pokersite.py.
	  Calling getSession may create a session if it does not already
	  exists, which is an undesirable side effect.

2008-12-02  Johan Euphrosine <proppy@aminche.com>

	* pokernetwork/pokeravatar.py, pokernetwork/pokerservice.py,
	  tests/test-pokeravatar.py.in, tests/test-pokerservice.py.in:
	  poker-network send PacketPokerTourneyFinish only if polling for a
	  tourney_serial not in avatar.tourneys

2008-12-01  Loic Dachary <loic@dachary.org>

	* database/schema.sql.in: set start time in the past to avoid race
	  conditions

2008-11-30  Bradley M. Kuhn  <bkuhn@ebb.org>

	* config/python.m4 (AM_PATH_PYTHON): Added python2.6 support.

	* config/ccpython.m4 (ALL_CC_PYTHON): Added python2.6 support.

	* database/1.6.0-1.7.0.sql: en_US.UTF-8 is no longer default locale,
	en_US by itself is.

	* database/schema.sql.in: en_US.UTF-8 is no longer default locale,